...
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/race_results_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/race_results_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/race_results_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/race_results_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
        android:id="@+id/race_results_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Small"/>

    <TextView
...
