<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sort_drivers_by">Sort by&#8230;</string>
    <string name="sort_drivers_by_number">Number</string>
    <string name="sort_drivers_by_name">Name</string>
    <string name="sort_drivers_by_nationality">Nationality</string>
    <string name="sort_drivers_by_date_of_birth">Date of birth</string>

    <string name="detail_driver_season_progress_tab_title">Progress</string>
    <string name="detail_driver_ranking_tab_title">Ranking</string>
</resources>