...

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
...
        android:layout_below="@+id/numberPicker"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.Large"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCancel"
        android:layout_alignBottom="@+id/buttonCancel"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.Large"
...
